--- a/azure-pipelines/templates/stages/build.yml
+++ b/azure-pipelines/templates/stages/build.yml
@@ -66,24 +66,59 @@ stages:
 
           - ${{ each project in parameters.projects }}:
               - pwsh: |
+                  # Create directories for raw and packaged artifacts
                   New-Item -ItemType Directory -Path $(Build.ArtifactStagingDirectory)/raw-$(target)/ -Force
                   New-Item -ItemType Directory -Path $(Build.ArtifactStagingDirectory)/package-$(target)/ -Force
+                  # Move published files to the raw directory
                   Move-Item -Path $(Build.ArtifactStagingDirectory)/drop-$(target)/${{ project }}* -Destination $(Build.ArtifactStagingDirectory)/raw-$(target)/
+                  # Extract the version number from the Directory.Build.props file
                   $version = (Select-Xml -Path ./Directory.Build.props -XPath 'Project/PropertyGroup/Version').Node.InnerText
+
+                  # Path variables for zip and tar.gz files
+                  $zipPath = "$(Build.ArtifactStagingDirectory)/package-$(target)/fiskaltrust.Launcher-$version.zip"
+                  $tarGzPath = "$(Build.ArtifactStagingDirectory)/package-$(target)/fiskaltrust.Launcher-$version.tar.gz"
+                  
+                  # Check if the image is Windows to use zip, otherwise use tar.gz
                   if("$(vmImage)" -eq "windows-latest") {
-                      Compress-Archive -Path $(Build.ArtifactStagingDirectory)/raw-$(target)/* -DestinationPath $(Build.ArtifactStagingDirectory)/package-$(target)/fiskaltrust.Launcher-$version.zip
+                      Compress-Archive -Path $(Build.ArtifactStagingDirectory)/raw-$(target)/* -DestinationPath $zipPath -Force
                   } else {
-                      tar -czf $(Build.ArtifactStagingDirectory)/package-$(target)/fiskaltrust.Launcher-$version.tar.gz -C $(Build.ArtifactStagingDirectory)/raw-$(target) .
+                      tar -czf $tarGzPath -C $(Build.ArtifactStagingDirectory)/raw-$(target) .
                   }
-                  # Hash calculation
-                  if("$(vmImage)" -eq "windows-latest") {
-                      $hash = Get-FileHash $(Build.ArtifactStagingDirectory)/package-$(target)/fiskaltrust.Launcher-$version.zip -Algorithm SHA256
+
+                  # Check if the file to hash exists and is not empty
+                  $fileToHash = if("$(vmImage)" -eq "windows-latest") { $zipPath } else { $tarGzPath }
+                  if (Test-Path $fileToHash -and (Get-Item $fileToHash).Length -gt 0) {
+                      Write-Host "File to hash: $fileToHash"
+                  
+                      # Compute the file hash
+                      if("$(vmImage)" -eq "windows-latest") {
+                          $hashResult = Get-FileHash $zipPath -Algorithm SHA256
+                      } else {
+                          $hashResult = bash -c "sha256sum $tarGzPath"
+                      }
+
+                      # Check if the hash result is not null or empty
+                      if ($hashResult) {
+                          Write-Host "Hash result: $hashResult"
+
+                          # Convert the hash result into a byte array
+                          $hashbytes = $hashResult.Hash -split '([A-F0-9]{2})' | ForEach-Object { if ($_) { [System.Convert]::ToByte($_, 16) } }
+                  
+                          # Ensure the byte array is not null or empty
+                          if ($hashbytes) {
+                              $hashstring = [System.Convert]::ToBase64String($hashbytes)
+                              # Write the hash value to a file
+                              Set-Content -Path "$(Build.ArtifactStagingDirectory)/package-$(target)/fiskaltrust.Launcher-$version.zip.hash" -Value $hashstring
+                              Write-Host "Hash base64 string: $hashstring"
+                          } else {
+                              Write-Error "Hash bytes array is null or empty."
+                          }
+                      } else {
+                          Write-Error "Failed to compute hash."
+                      }
                   } else {
-                      $hash = bash -c "sha256sum $(Build.ArtifactStagingDirectory)/package-$(target)/fiskaltrust.Launcher-$version.tar.gz"
+                      Write-Error "File to hash does not exist or is empty."
                   }
-                  $hashbytes = $hash.Hash -split '([A-F0-9]{2})' | ForEach-Object { if ($_) { [System.Convert]::ToByte($_, 16) } }
-                  $hashstring = [System.Convert]::ToBase64String($hashbytes)
-                  Set-Content -Path $(Build.ArtifactStagingDirectory)/package-$(target)/fiskaltrust.Launcher-$version.zip.hash -Value $hashstring
                 displayName: "Package ${{ project }}"
 
           - publish: $(Build.ArtifactStagingDirectory)/package-$(target)
