--- a/azure-pipelines/templates/stages/build.yml
+++ b/azure-pipelines/templates/stages/build.yml
@@ -44,7 +44,6 @@ stages:
                   mv ./Directory.build.props ./Directory.Build.props
                   dotnet publish ./src/${{ project }}/${{ project }}.csproj -c ${{ parameters.config }} -o $(Build.ArtifactStagingDirectory)/drop-$(target) -r $(target) -f net6.0 --self-contained true /p:EnableCompressionInSingleFile=true /p:DebugType=None /p:DebugSymbols=false /p:GenerateRuntimeConfigurationFiles=false -p:PublishSingleFile=true -p:PublishReadyToRun=true
                 displayName: "Publish ${{ project }}"
-
           - task: codesigning@2
             displayName: 'Code Signing'
             inputs:
@@ -59,11 +58,8 @@ stages:
                 ./src/**/fiskaltrust.Launcher.exe
                 ./src/**/fiskaltrust.LauncherUpdater
                 ./src/**/fiskaltrust.LauncherUpdater.exe
-                displayName: 'Code Signing'
-
           - publish: $(Build.ArtifactStagingDirectory)/drop-$(target)
             artifact: drop-$(target)
-
           - ${{ each project in parameters.projects }}:
               - pwsh: |
                   # Create directories for raw and packaged artifacts
@@ -73,57 +69,53 @@ stages:
                   Move-Item -Path $(Build.ArtifactStagingDirectory)/drop-$(target)/${{ project }}* -Destination $(Build.ArtifactStagingDirectory)/raw-$(target)/
                   # Extract the version number from the Directory.Build.props file
                   $version = (Select-Xml -Path ./Directory.Build.props -XPath 'Project/PropertyGroup/Version').Node.InnerText
-
                   # Path variables for zip and tar.gz files
                   $zipPath = "$(Build.ArtifactStagingDirectory)/package-$(target)/fiskaltrust.Launcher-$version.zip"
                   $tarGzPath = "$(Build.ArtifactStagingDirectory)/package-$(target)/fiskaltrust.Launcher-$version.tar.gz"
-                  
                   # Check if the image is Windows to use zip, otherwise use tar.gz
-                  if("$(vmImage)" -eq "windows-latest") {
+                  if ("$(vmImage)" -eq "windows-latest") {
                       Compress-Archive -Path $(Build.ArtifactStagingDirectory)/raw-$(target)/* -DestinationPath $zipPath -Force
                   } else {
                       tar -czf $tarGzPath -C $(Build.ArtifactStagingDirectory)/raw-$(target) .
                   }
-
-                  # Check if the file to hash exists and is not empty
-                  $fileToHash = if("$(vmImage)" -eq "windows-latest") { $zipPath } else { $tarGzPath }
-                  if (Test-Path $fileToHash -and (Get-Item $fileToHash).Length -gt 0) {
-                      Write-Host "File to hash: $fileToHash"
-                  
-                      # Compute the file hash
-                      if("$(vmImage)" -eq "windows-latest") {
-                          $hashResult = Get-FileHash $zipPath -Algorithm SHA256
-                      } else {
-                          $hashResult = bash -c "sha256sum $tarGzPath"
-                      }
-
-                      # Check if the hash result is not null or empty
-                      if ($hashResult) {
-                          Write-Host "Hash result: $hashResult"
-
-                          # Convert the hash result into a byte array
-                          $hashbytes = $hashResult.Hash -split '([A-F0-9]{2})' | ForEach-Object { if ($_) { [System.Convert]::ToByte($_, 16) } }
-                  
-                          # Ensure the byte array is not null or empty
-                          if ($hashbytes) {
-                              $hashstring = [System.Convert]::ToBase64String($hashbytes)
-                              # Write the hash value to a file
-                              Set-Content -Path "$(Build.ArtifactStagingDirectory)/package-$(target)/fiskaltrust.Launcher-$version.zip.hash" -Value $hashstring
-                              Write-Host "Hash base64 string: $hashstring"
+                  # Check if the file to hash exists
+                  $fileToHash = if ("$(vmImage)" -eq "windows-latest") { $zipPath } else { $tarGzPath }
+                  if (Test-Path $fileToHash) {
+                      # Check if the file is not empty
+                      if ((Get-Item $fileToHash).Length -gt 0) {
+                          Write-Host "File to hash: $fileToHash"
+                          # Compute the file hash
+                          if ("$(vmImage)" -eq "windows-latest") {
+                              $hashResult = Get-FileHash $zipPath -Algorithm SHA256
                           } else {
-                              Write-Error "Hash bytes array is null or empty."
+                              $hashResult = bash -c "sha256sum $tarGzPath"
+                          }
+                          # Check if the hash result is not null or empty
+                          if ($hashResult) {
+                              Write-Host "Hash result: $hashResult"
+                              # Convert the hash result into a byte array
+                              $hashbytes = $hashResult.Hash -split '([A-F0-9]{2})' | Where-Object { $_ } | ForEach-Object { [System.Convert]::ToByte($_, 16) }
+                              # Ensure the byte array is not null or empty
+                              if ($hashbytes) {
+                                  $hashstring = [System.Convert]::ToBase64String($hashbytes)
+                                  # Write the hash value to a file
+                                  Set-Content -Path "$(Build.ArtifactStagingDirectory)/package-$(target)/fiskaltrust.Launcher-$version.zip.hash" -Value $hashstring
+                                  Write-Host "Hash base64 string: $hashstring"
+                              } else {
+                                  Write-Error "Hash bytes array is null or empty."
+                              }
+                          } else {
+                              Write-Error "Failed to compute hash."
                           }
                       } else {
-                          Write-Error "Failed to compute hash."
+                          Write-Error "File to hash is empty."
                       }
                   } else {
-                      Write-Error "File to hash does not exist or is empty."
+                      Write-Error "File to hash does not exist."
                   }
                 displayName: "Package ${{ project }}"
-
           - publish: $(Build.ArtifactStagingDirectory)/package-$(target)
             artifact: package-$(target)
-
       - job: PublishScripts
         dependsOn: Build
         condition: succeeded()
