--- a/azure-pipelines/templates/stages/build.yml
+++ b/azure-pipelines/templates/stages/build.yml
@@ -87,19 +87,28 @@ stages:
                           # Compute the file hash
                           if ("$(vmImage)" -eq "windows-latest") {
                               $hashResult = Get-FileHash $zipPath -Algorithm SHA256
+                              $hashString = $hashResult.Hash
                           } else {
+                              # Run sha256sum and capture the output
                               $hashResult = bash -c "sha256sum $tarGzPath"
+                              # Split the output to get just the hash value
+                              $hashString = $hashResult.Split(' ')[0]
                           }
-                          # Check if the hash result is not null or empty
-                          if ($hashResult) {
-                              Write-Host "Hash result: $hashResult"
-                              # Convert the hash result into a byte array
-                              $hashbytes = $hashResult.Hash -split '([A-F0-9]{2})' | Where-Object { $_ } | ForEach-Object { [System.Convert]::ToByte($_, 16) }
+                          # Check if the hash string is not null or empty
+                          if (![string]::IsNullOrWhiteSpace($hashString)) {
+                              Write-Host "Hash result: $hashString"
+                              # Convert the hash string into a byte array
+                              $hashbytes = $hashString -split '([A-F0-9]{2})' | Where-Object { $_ } | ForEach-Object { [System.Convert]::ToByte($_, 16) }
                               # Ensure the byte array is not null or empty
                               if ($hashbytes) {
                                   $hashstring = [System.Convert]::ToBase64String($hashbytes)
                                   # Write the hash value to a file
-                                  Set-Content -Path "$(Build.ArtifactStagingDirectory)/package-$(target)/fiskaltrust.Launcher-$version.zip.hash" -Value $hashstring
+                                  $hashFilePath = if ("$(vmImage)" -eq "windows-latest") { 
+                                      "$(Build.ArtifactStagingDirectory)/package-$(target)/fiskaltrust.Launcher-$version.zip.hash"
+                                  } else { 
+                                      "$(Build.ArtifactStagingDirectory)/package-$(target)/fiskaltrust.Launcher-$version.tar.gz.hash"
+                                  }
+                                  Set-Content -Path $hashFilePath -Value $hashstring
                                   Write-Host "Hash base64 string: $hashstring"
                               } else {
                                   Write-Error "Hash bytes array is null or empty."
